fixed navbar on small devices

--- a/css/header.css
+++ b/css/header.css
@@ -93,9 +93,9 @@ body {
     display: block;
     width: 25px;
     height: 3px;
-    background-color: white;
     margin: 5px 0;
     transition: all 0.3s ease;
+    background-color: #333;
 }
 
 /* Mobile Menu */
